remove extra dependencies, update component to start using spinner.

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -5,6 +5,7 @@
     </mat-form-field>
   </form>
   <div class="cards">
+    <!-- <mat-spinner *ngIf="isDataLoaded"></mat-spinner> -->
     <mat-card *ngFor="let result of results | async">
       <a [href]="'https://www.youtube.com/watch?v=' + result.id.videoId" target="_blank">
         <h3>{{result.snippet.title}}</h3>
